--- a/css/styles.css
+++ b/css/styles.css
@@ -820,8 +820,8 @@ text-align: left;
     top: 2817px;
     background-color: var(--hover-color);
     color: var(--third-color);
-    justify-content: center;
-    align-items: center;
+    text-align: start;
+    padding-left: 42px;
 }
 
 .footer-newsletter-icon {
@@ -869,7 +869,121 @@ text-align: left;
     border-radius: 50%;
     cursor: pointer;
 }
+
+.modal-title {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.15;
+    letter-spacing: 0.03em;
+    text-align: center;
+    margin: 40px 40px 12px 40px;
+}
+
+/* .username {
+    position: absolute;
+    width: 448px;
+    height: 40px;
+    left: 576px;
+    top: 314px;
+    
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+} */
+
+input,
+textarea {
+    padding: 12px 16px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+}
+textarea {
+    resize: none;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.667;
+    letter-spacing: 0.01em;
+    text-align: left;
+}
+
+label {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    margin-left: 40px;
+    margin-right: 40px;
+    /* border: 1px solid rgba(33, 33, 33, 0.2); */
+    box-sizing: border-box;
+    border-radius: 4px;
+    /* position: absolute; */
+    width: 448px;
+    /* height: 40px; */
+
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.667;
+    letter-spacing: 0.01em;
+    text-align: left;
+    color: var(--secondary-color);
+}
+
+.form-textarea::placeholder {
+    color: #75757580;;
+}
+
+.modal-form-policy-text::before {
+    display: inline-block;
+    content: "";
+    width: 16px;
+    height: 16px;
+    border: 2px solid var(--main-color);
+    border-radius: 3px;
+}
+
+.modal-form-policy:checked + .modal-form-policy-text::before {
+    background-color: var(--hover-color);
+    border: 3px solid var(--third-color);
+    background-image: url(../images/symbol-defs.svg#icon-icon-check);
+}
+
+.visually-hidden {
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px);
+    clip: rect(1px, 1px, 1px, 1px);
+    padding: 0 !important;
+    border: 0 !important;
+    height: 1px !important;
+    width: 1px !important;
+    overflow: hidden;
+}
+
+.modal-form-policy-label {
+    margin-left: 55px;
+}
+
+.modal-form-policy-text {
+font-size: 14px;
+font-weight: 400;
+line-height: 1.714;
+letter-spacing: 0.03em;
+text-align: left;
+}
+
  
+.form-btn {
+    height: 50px;
+    width: 200px;
+    left: 700px;
+    top: 712px;
+    border-radius: 4px;
+    background-color: var(--hover-color);
+    color: var(--third-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border: 1px solid #21212133;
+    margin: 30px 164px 40px 164px; 
+}
+
 .is-hidden {
     opacity: 0;
     /* visibility: hidden; */
