--- a/css/styles.css
+++ b/css/styles.css
@@ -782,9 +782,9 @@ text-align: left;
     height: 20px;
 }
 
-/* .footer-newsletter {
-    margin-left: 78px;
-} */
+.footer-newsletter {
+    width: 570px;
+}
 
 .footer-newsletter-title {
     color: var(--third-color);
@@ -795,7 +795,7 @@ text-align: left;
     text-align: left;
     display: flex;
     flex-direction: column;
-    margin-top: 38px;
+    margin: 0 auto;
 }
 
 .footer-newsletter-input {
@@ -809,10 +809,11 @@ text-align: left;
     margin-top: 20px;
     margin-right: 12px;
     color: var(--third-color);
+
 }
 
 .footer-newsletter-btn {
-    display: block;
+    display: flex;
     position: absolute;
     width: 200px;
     height: 50px;
@@ -821,7 +822,7 @@ text-align: left;
     background-color: var(--hover-color);
     color: var(--third-color);
     text-align: start;
-    padding-left: 42px;
+    padding: 12px 30px 10px 42px;
 }
 
 .footer-newsletter-icon {
@@ -891,13 +892,13 @@ text-align: left;
     border-radius: 4px;
 } */
 
-input,
-textarea {
-    padding: 12px 16px;
+input {
+    padding: 12px 25px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     box-sizing: border-box;
     border-radius: 4px;
 }
+
 textarea {
     resize: none;
     font-size: 12px;
@@ -905,6 +906,10 @@ textarea {
     line-height: 1.667;
     letter-spacing: 0.01em;
     text-align: left;
+    padding: 12px 16px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
 }
 
 label {
@@ -928,6 +933,12 @@ label {
     color: var(--secondary-color);
 }
 
+.modal-icon {
+    position: absolute;
+    margin-top: 33px;
+    margin-left: 10px;
+}
+
 .form-textarea::placeholder {
     color: #75757580;;
 }
@@ -939,11 +950,12 @@ label {
     height: 16px;
     border: 2px solid var(--main-color);
     border-radius: 3px;
+    margin-right: 8px;
 }
 
 .modal-form-policy:checked + .modal-form-policy-text::before {
-    background-color: var(--hover-color);
-    border: 3px solid var(--third-color);
+    /* background-color: var(--hover-color); */
+    border: 1px solid var(--third-color);
     background-image: url(../images/symbol-defs.svg#icon-icon-check);
 }
 
